--- a/routing/package.json
+++ b/routing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bankfunc",
+  "name": "routing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,6 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "reactstrap": "^8.7.1",
-    "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
